[gd_scene load_steps=5 format=3 uid="uid://cghw0y1kp2afh"]

[ext_resource type="Script" path="res://scenes/UI/win_screen.gd" id="1_ch578"]
[ext_resource type="FontFile" uid="uid://ubn564mq81hg" path="res://fonts/ariblk.ttf" id="2_e68eo"]

[sub_resource type="LabelSettings" id="LabelSettings_yu0m7"]
font = ExtResource("2_e68eo")
font_size = 131
outline_size = 17
outline_color = Color(0, 0, 0, 1)
shadow_size = 37
shadow_color = Color(0, 0, 0, 0.87451)
shadow_offset = Vector2(12.109, 12.113)

[sub_resource type="LabelSettings" id="LabelSettings_x7spw"]
font = ExtResource("2_e68eo")
font_size = 85
outline_size = 17
outline_color = Color(0, 0, 0, 1)
shadow_size = 37
shadow_color = Color(0, 0, 0, 0.87451)
shadow_offset = Vector2(12.109, 12.113)

[node name="Win Screen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ch578")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -332.0
offset_bottom = 332.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "YOU WIN!"
label_settings = SubResource("LabelSettings_yu0m7")
horizontal_alignment = 1

[node name="score" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "score:"
label_settings = SubResource("LabelSettings_x7spw")
horizontal_alignment = 1

[node name="time" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "time:"
label_settings = SubResource("LabelSettings_x7spw")
horizontal_alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_e68eo")
theme_override_font_sizes/font_size = 92
text = "NEXT LEVEL"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_e68eo")
theme_override_font_sizes/font_size = 92
text = "RETRY"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_e68eo")
theme_override_font_sizes/font_size = 92
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
